Changes in 1.1.29:
  o Client Changes:
    * In conaryrc files, repositoryMap entries can now use wildcards
      for the server name.
    * Multiple entitlements can now be sent to each server.
    * Server names in entitlements may include wildcards.
    * Entitlements may be placed in conaryrc files now using
      'entitlement server entitlement'. "conary config" displays
      entitlement information.
    * A bug that limited a single MetadataItem to less than 64 KiB has
      been fixed.  Conary 1.1.29 will produce metadata that will not
      be visible to older clients.  Likewise, metadata produced by
      older clients will not be visible to Conary 1.1.29 and later
      clients. (CNY-1746)
    * Metadata items can now store strings with NUL characters in
      them. (CNY-1750)
    * The client API will now raise an InsufficientPermission error
      instead of an OpenError when the client's entitlements are
      not allowing access. (CNY-1738)

  o Build Changes:
    * Refreshed autosource files are now displayed by 'cvc revert' and
      'cvc diff'. (CNY-1647)
    * Support for the Bazaar revision control system has been added via
      r.addBzrSnapshot(). (requires bzr >= 0.16).

  o Server Changes:
    * (Nearly) all repository operations are now performed using the
      permissions of the anonymous user in addition to the permission
      set for any user authentication information which is present.
    * Path names in the entitlementsDirectory no longer have any
      meaning. All entitlements are read, and the serverName in the
      XML for the entitlement is used to determine which server to
      send the entitlement too.
    * Entitlement classes are no longer used as part of authentication;
      they may still be specified, but repositories now look up the
      class(es) for an entitlement based on the key.

  o Internal Changes:
    * The restart information, necessary for Conary to resume execution